# maybe_const

./: .gitignore  Cargo.toml  README.md  run_all_tests.ps1
src/: incomplete.rs  lib.rs  min.rs  stable.rs
src/bool/: incomplete.rs  min.rs  mod.rs  stable.rs
